--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.geekbrains</groupId>
-    <artifactId>cloud-dec-2-2021</artifactId>
+    <groupId>com.geekbrains.cloud.jan</groupId>
+    <artifactId>cloud-storage</artifactId>
+    <packaging>pom</packaging>
     <version>1</version>
+    <modules>
+        <module>core</module>
+        <module>server</module>
+        <module>client</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -16,7 +22,6 @@
     </properties>
 
     <dependencies>
-
         <!--
       Удобный движок для генерации кода
       https://mvnrepository.com/artifact/org.projectlombok/lombok -->
@@ -37,8 +42,6 @@
             <artifactId>netty-all</artifactId>
             <version>${netty.version}</version>
         </dependency>
-
     </dependencies>
-
 
 </project>
